Fix alignment is off
The article container width is now set whenever the window
is resized. This keeps the article container div centered
in the user's viewport

--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -968,15 +968,24 @@ p{
 }
 
 .view-enter-setup {
-    left: 100%;
-}
-.view-enter-setup.view-enter-start {
-    left:0;
+    opacity: 0;
+    left: 300px;
+    position: absolute;
 }
 
-.view-leave-setup {}
+.view-enter-setup.view-enter-start {
+    left:0;
+    opacity:1;
+}
+
+.view-leave-setup {
+    position:absolute;
+    left:0;
+    opacity:1;
+}
 .view-leave-setup.view-leave-start {
-    left: -100%;
+    left: -300px;
+    opacity: 0;
 }
 
 .app-view-container{
